# sozo

./: .gitignore  README.md  THIRD-PARTY-NOTICES.md  pyproject.toml
apps/local/: app.py
apps/processing/: app.py  constants.py  face_detector.py  facial_landmarks_detector.py  head_pose_estimator.py  schemas.py
apps/processing/models/: facial_landmarks_3d.csv
apps/web/: .gitignore  aggregator.py  app.py  constants.py  database.py  router.py  schemas.py  store.py
apps/web/static/css/: default.css
apps/web/static/images/: .gitignore
apps/web/static/js/: index.js
apps/web/templates/: index.html
config/: launch_all.yaml  launch_processing.yaml  launch_web_and_local.yaml
libs/: types.py
libs/config/: __init__.py  schemas.py
libs/ipc/: __init__.py  analysis_msg_serializer.py  base_pubsub.py  base_serializer.py  image_serializer.py  monitor_msg_serializer.py  zmq_pubsub.py
libs/schemas/: analysis_msg.py  monitor_msg.py
prototype/face_detetion_comparing/: face_pose.py  landmark.py  model.csv  pose_estimator.py
scripts/: convert_pdm_to_csv.py  download_images.py  launch.py  run.py  run_local_dev.py  run_processing_dev.py  run_web_dev.py
src/: run.py
src/ipc/: __init__.py  base_serializer.py  msg_pack_serializer.py  zmq_pubsub.py
src/local/: app.py
